--- a/body/algorithms/search.tex
+++ b/body/algorithms/search.tex
@@ -13,3 +13,5 @@
 \subsubsection{Beam Search}
 也叫集束搜索。
 对贪心搜索的一种改进。在进行搜索时，并不是只沿一个方向搜索，会同时保留$n$个最优的方向，分别以这$n$个方向进行扩展，扩展后在每个方向都可以得到$n$个备选项，那么则有$n^2$个备选项，在这$n^2$个被选项里选择最优的$n$个备选项作为下次扩展的方向，以此类推，即在搜索树的每一层都只保留$n$个方向。$n$就是beam width。
+
+\subsubsection{前缀和与差分}
