--- a/references.bib
+++ b/references.bib
@@ -262,3 +262,41 @@ url={https://openreview.net/forum?id=ryGs6iA5Km},
 	pages={2354--2366},
 	year={2018}
 }
+
+@article{bahdanau2016neural,
+	title={Neural Machine Translation by Jointly Learning to Align and Translate},
+	author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+	journal={international conference on learning representations},
+	year={2016}
+}
+
+@article{luong2015effective,
+	title={Effective Approaches to Attention-based Neural Machine Translation},
+	author={Luong, Thang and Pham, Hieu and Manning, D. Christopher},
+	journal={Conference on Empirical Methods in Natural Language Processing},
+	year={2015}
+}
+
+@article{sutskever2014sequence,
+	title={Sequence to Sequence Learning with Neural Networks},
+	author={Sutskever, Ilya and Vinyals, Oriol and Le, V. Quoc},
+	journal={ADVANCES IN NEURAL INFORMATION PROCESSING SYSTEMS 27 (NIPS 2014)},
+	pages={3104--3112},
+	year={2014}
+}
+
+@article{cho2014learning,
+	title={Learning Phrase Representations using RNN Encoder-Decoder for Statistical Machine Translation},
+	author={Cho, Kyunghyun and Merrienboer, van Bart and Gülçehre, Çaglar and Bahdanau, Dzmitry and Bougares, Fethi and Schwenk, Holger and Bengio, Yoshua},
+	journal={EMNLP},
+	pages={1724--1734},
+	year={2014}
+}
+
+@article{vaswani2017attention,
+	title={Attention Is All You Need},
+	author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, N. Aidan and Kaiser, Lukasz and Polosukhin, Illia},
+	journal={ADVANCES IN NEURAL INFORMATION PROCESSING SYSTEMS 30 (NIPS 2017)},
+	pages={5998--6008},
+	year={2017}
+}
