--- a/body/coding/tensorflow.tex
+++ b/body/coding/tensorflow.tex
@@ -73,3 +73,7 @@ condition是一个布尔数组，condition、x、y的维度必须相同。
 \textit{tf.squeeze(input, axis=None, name=None)}。
 
 input为输入的张量；axis为可选参数，可以为整数或者整数1-D数组，为None时表示移除所有大小为1的维，否则移除指定的维。
+
+反之则为$unsqueeze$。
+
+\paragraph{tf.expand_dims}给数据增加维度。\textit{tf.expand\_dims(input, axis, name)}，表示在$input$的第$axis$维插入一个维度，维度大小为1。
