--- a/main.tex
+++ b/main.tex
@@ -43,9 +43,9 @@
 \usepackage{pdfpages}  
 %\graphicspath{ {./images/} }
 
-\newcommand{\tred}[1]{ {\textcolor{red}{#1}} }
-\newcommand{\tbred}[1]{ {\textbf{\textcolor{red}{#1}} } }
-\newcommand{\tbc}[2]{ {\textbf{\textcolor{#1}{#2}} } }
+%\newcommand{\tred}[1]{ {\textcolor{red}{#1}} }
+%\newcommand{\tbred}[1]{ {\textbf{\textcolor{red}{#1}} } }
+%\newcommand{\tbc}[2]{ {\textbf{\textcolor{#1}{#2}} } }
 
 
 %\title{学习之旅}
@@ -64,7 +64,6 @@
 %%  University of Pittsburgh\\
 %%  Pittsburgh, PA 15213 \\
 %%  \texttt{ZIL50@pitt.edu} \\
-
   %% \AND
   %% Coauthor \\
   %% Affiliation \\
@@ -165,8 +164,11 @@
 \input{body/Math/chap01}
 
 \section{Algorithms}
+\subsection{Basic}
+\input{body/algorithms/basic}
 \subsection{Search}
 \input{body/algorithms/search}
+
 
 \section{\LaTeX}
 \input{body/latex}
@@ -188,7 +190,8 @@
 %\subsection{Ideas01}
 %\input{body/Ideas/chap01}
 
-
+\section{Others}
+\input{body/others}
 
 % %一 \section{Task description and data construction}
 % \label{sec:headings}
