--- a/references.bib
+++ b/references.bib
@@ -300,3 +300,11 @@ url={https://openreview.net/forum?id=ryGs6iA5Km},
 	pages={5998--6008},
 	year={2017}
 }
+
+@article{devlin2019bert,
+	title={BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+	author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+	journal={north american chapter of the association for computational linguistics},
+	year={2019}
+}
+
