--- a/body/latex.tex
+++ b/body/latex.tex
@@ -31,6 +31,11 @@
 默认是从1开始编号的，如果要从0开始，可以加一条命令：\begin{verbatim}\setcounter{section}{-1}\end{verbatim}
 
 
+\subsection{常用符号}
+\begin{myitemize}
+	\item 约等于$\approx$ : \verb|\approx|
+	\item $\approxeq$ : \verb|\approxeq|
+\end{myitemize}
 
 
 
