--- a/main.tex
+++ b/main.tex
@@ -138,11 +138,11 @@
 % \section{How powerful are graph neural networks?}
 % \input{body/powerful-gnns}
 
-
-
 \section{Concepts about ML}
 \subsection{Basics}
 \input{body/ML/basics}
+\subsection{常用算法}
+\input{body/ML/algorithms}
 
 \section{NLP}
 \input{body/ML/NLP}
@@ -169,10 +169,6 @@
 \subsection{Search}
 \input{body/algorithms/search}
 
-
-\section{\LaTeX}
-\input{body/latex}
-
 \section{Coding}
 
 \subsection{C++}
@@ -189,6 +185,12 @@
 %\section{IDEAS}
 %\subsection{Ideas01}
 %\input{body/Ideas/chap01}
+
+\section{Datasets}
+\input{body/datasets}
+
+\section{\LaTeX}
+\input{body/latex}
 
 \section{Others}
 \input{body/others}
