--- a/references.bib
+++ b/references.bib
@@ -308,3 +308,8 @@ url={https://openreview.net/forum?id=ryGs6iA5Km},
 	year={2019}
 }
 
+@article{junqiu2019nezha,
+	title={NEZHA: Neural Contextualized Representation for Chinese Language  Understanding},
+	author={Junqiu, Wei and Xiaozhe, Ren and Xiaoguang, Li and Wenyong, Huang and Yi, Liao and Yasheng, Wang and Jiashu, Lin and Xin, Jiang and Xiao, Chen and Qun, Liu},
+	year={2019}
+}
