--- a/body/algorithms/basic.tex
+++ b/body/algorithms/basic.tex
@@ -1,4 +1,4 @@
-\subsubsection{大整数}
+\subsection{大整数}
 \paragraph{Motivation}在C、C++等一些语言中，支持的整数类型所能保存的范围是有效的，相对Java、Python等一些语言中支持的范围是要小的。
 
 \paragraph{HOW?}考虑几个可能的涉及大整数的例子：大整数的加法、大整数的减法大整数乘某个数大整数除以某个数。主要涉及到的问题有：
@@ -9,10 +9,10 @@
 \end{itemize}
 
 
-\subsubsection{前缀和与差分}
+\subsection{前缀和与差分}
 
 
-\subsubsection{并查集}
+\subsection{并查集}
 \paragraph{Motivation}将n个不同的元素分成一组\textbf{不相交}的集合。能够快速地完成两种操作：查找某个元素属于那个集合、合并两个集合。注意：“不相交”可以有不同的定义，如graph中的节点是否相邻、在某种度量下的不相交等。
 
 \paragraph{HOW?}
