--- a/body/algorithms/search.tex
+++ b/body/algorithms/search.tex
@@ -1,4 +1,4 @@
-\subsubsection{贪心算法}
+\subsection{贪心算法}
 贪心搜索是一种搜索解空间的策略，在搜索时，基于当前状态，选择代价最低或估计收益最大的方向作为下一步搜索的方向。使用贪心搜索并不能保证全局最优解，目的是为了找到一个可行解。在使用贪心算法前，先要证明以下两个东西：
 \begin{itemize}
 	\item 贪心选择性：指所求问题的整体最优解可以通过一系列局部最优的选择（通过最优度量标准来判断）来到达
@@ -10,7 +10,7 @@
 
 
 
-\subsubsection{Beam Search}
+\subsection{Beam Search}
 也叫集束搜索。
 对贪心搜索的一种改进。在进行搜索时，并不是只沿一个方向搜索，会同时保留$n$个最优的方向，分别以这$n$个方向进行扩展，扩展后在每个方向都可以得到$n$个备选项，那么则有$n^2$个备选项，在这$n^2$个被选项里选择最优的$n$个备选项作为下次扩展的方向，以此类推，即在搜索树的每一层都只保留$n$个方向。$n$就是beam width。
 
