--- a/body/coding/lessons.tex
+++ b/body/coding/lessons.tex
@@ -1,9 +1,8 @@
-\paragraph{batch\_size对训练的影响}
+\subsection{batch\_size对训练的影响}
 
-\paragraph{某个iteration成为训练效果的短板}
+\subsection{某个iteration成为训练效果的短板}
 
-\paragraph{损失函数值为NaN}
+\subsection{损失函数值为NaN}
 
-\paragraph{\tbc{red}{类别的正负样本不均衡问题}}
 
-\paragraph{数据的格式问题}
+\subsection{数据的格式问题}
