--- a/main.tex
+++ b/main.tex
@@ -137,61 +137,93 @@
 
 % \section{How powerful are graph neural networks?}
 % \input{body/powerful-gnns}
+\part{Mathematics}
+\section{chap01}
+\input{body/Math/chap01}
 
-\section{Concepts about ML}
-\subsection{Basics}
-\input{body/ML/basics}
-\subsection{常用算法}
-\input{body/ML/algorithms}
 
-\section{NLP}
-\input{body/ML/NLP}
+\clearpage
+\part{Machine Learning}
+{\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\  %{\noindent}　表示取消缩进，\rule[水平高度]{长度}{粗细}
+\section{Basics}
+\input{body/ML/basic}
+\section{经典算法}
+\input{body/ML/classic}
 
+
+\clearpage
+\part{Graphs}
+{\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\
 \section{Graphs}
 \input{body/ML/graph}
 
 \section{Knowledge Graph}
 \input{body/ML/KG}
 
-\section{Recommender System}
-\input{body/ML/recsys}
 
+\clearpage
+\part{Natrual Language Process}
+{\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\
+\section{NLP}
+\input{body/ML/NLP}
+
+
+\clearpage
+\part{Recommender Systems}
+{\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\
+\section{基本概念}
+\input{body/recsys/basic}
+
+\section{经典算法}
+\input{body/recsys/classic}
+
+
+\clearpage
+\part{Information Retrieval}
+{\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\
 \section{Learning to Rank}
 \input{body/ML/rank}
 
-\section{Concepts about Math}
-\subsection{chap01}
-\input{body/Math/chap01}
 
-\section{Algorithms}
-\subsection{Basic}
+\clearpage
+\part{Algorithms}
+{\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\
+\section{Basic}
 \input{body/algorithms/basic}
-\subsection{Search}
+\section{Search}
 \input{body/algorithms/search}
 
-\section{Coding}
 
-\subsection{C++}
+\clearpage
+\part{Coding Practice}
+{\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\
+\section{C++}
 \input{body/coding/cpp}
 
-\subsection{Python}
+\section{Python}
 \input{body/coding/python}
 
-\subsection{Tensorflow/PyTorch}
+\section{Tensorflow}
 \input{body/coding/tensorflow}
 
-\subsection{ML/DL错误集锦}
+\section{Pytorch}
+\input{body/coding/pytorch}
+
+\section{ML/DL错误集锦}
 \input{body/coding/lessons}
 %\section{IDEAS}
 %\subsection{Ideas01}
 %\input{body/Ideas/chap01}
+\section{\LaTeX}
+\input{body/latex}
 
 \section{Datasets}
 \input{body/datasets}
 
-\section{\LaTeX}
-\input{body/latex}
 
+\clearpage
+\part{Others}
+{\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\
 \section{Others}
 \input{body/others}
 
