--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 
 
 %\title{学习之旅}
-\title{\mathcal{Learning LOG}}
+\title{$\mathcal{LEARNING\ \ LOG}$}
 
 \author{
   郭治焱 \\
@@ -96,7 +96,6 @@
 
 \begin{document}
 \maketitle
-
 \input{mycmd}
 % \begin{abstract}
 % Data mining is a good way to find the relationship between raw data and predict the target we want which is also widely used in different field nowadays. In this project, we implement a lots of technology and method in data mining to predict the sale of an item based on its previous sale. We create a strong model to predict the sales. After evaluating this model, we conclude that this model can be used in normal life for future sale’s prediction. 
