--- a/body/ML/classic.tex
+++ b/body/ML/classic.tex
@@ -10,7 +10,7 @@ $$
 
 其实线性回归模型很像神经络中的一部分———一个激活函数为恒等映射的神经元，也可以看做一个神经网络模型———一个只有一层的神经网络模型。
 
-逻辑回归（Logistic regression, LR），也是在线性回归的基础上的一个分类模型。如果把线性回归看做神经网络单元，那么把激活函数替换为非线性的激活函数就是LR了。从数学形式来看，LR是这样的：
+\textbf{逻辑回归（Logistic regression, LR）}，也是在线性回归的基础上的一个分类模型。如果把线性回归看做神经网络单元，那么把激活函数替换为非线性的激活函数就是LR了。从数学形式来看，LR是这样的：
 $$
 z = b + \sum_{i=1}^{n} w_i \cdot x_i 
 $$
@@ -495,6 +495,10 @@ $$
 			  &\xi_i \geq 0, \hat{\xi_i} \geq 0, i = 1, 2, ..., N \nonumber
 \end{align}
 后续求解与上述类似。
+
+
+\subsection{PCA}
+全称 Principal component analysis，即主成分分析。PCA 利用正交变换把由线性相关变量表示的观测数据转换为少数几个线性无关变量表示的数据，少数的线性无关变量就是主成分。如果从基的角度来看，就是将数据在原来的相关的基下的表示，转化为无关的基下的表示。
 
 
 \subsection{metric learning} 
