--- a/body/ML/graph.tex
+++ b/body/ML/graph.tex
@@ -111,3 +111,14 @@ $p, q$就是控制游走的两个参数：
 论文中将这叫做Biased random walk，通过调整游走的参数$p,q$能够使学习到的表征在同质性（Homophily）和结构相似性（Structure Equivalence）间平衡。BFS能够探索探索homophily，即距离相近的结点，如Fig.\ref{fig:node2vec2}所示，$s_1, s_2, s_3, s_4$是与$u$相邻的结点，它们的表征应该相似；DFS使得探索到更远的地方，能够发现与$u$结构类似地结点，如$s_6$，它俩地表征也应该相似。所以学习到的表征既能体现结点地同质性，也能体现结点地结构相似性。
 
 \subsection{Spectral graph convolution}
+谱聚类，主要思想是把所有的数据看做空间中的点，这些点之间可以用边连接起来。距离较远的两个点之间的边权重值较低，而距离较近的两个点之间的边权重值较高，通过对所有数据点组成的图进行切图，让切图后不同的子图间边权重和尽可能的低，而子图内的边权重和尽可能的高，从而达到聚类的目的。
+
+给定一个数据集 $D = \{x_1, x_2, \cdots, x_n\},\ \ x_i \in \mathbb{R}^m$，如何对其进行聚类呢？谱聚类的做法：
+\begin{enumerate}
+	\item 构建样本之间的相似矩阵；
+	\item 根据相似矩阵构建邻接矩阵；
+	\item 计算标准化后的拉普拉斯矩阵的特征值和特征向量；
+	\item 取最小的 $k1$ 个特征值对应的特征向量，作为原数据集的替代，得到新的特征矩阵；
+	\item 对新的特征矩阵进行行归一化；
+	\item 在新的特征矩阵的基础上进行聚类。
+\end{enumerate}
