--- a/main.tex
+++ b/main.tex
@@ -151,6 +151,13 @@
 
 
 \clearpage
+\part{Deep Learning}
+{\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\ 
+\section{Basics}
+\input{body/DL/basic}
+
+
+\clearpage
 \part{Graphs}
 {\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\
 \section{Graphs}
@@ -163,8 +170,11 @@
 \clearpage
 \part{Natrual Language Process}
 {\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\
-\section{NLP}
-\input{body/ML/NLP}
+\section{基础}
+\input{body/nlp/basic}
+
+\section{经典算法}
+\input{body/nlp/classic}
 
 
 \clearpage
