--- a/body/Math/chap01.tex
+++ b/body/Math/chap01.tex
@@ -347,3 +347,5 @@ $$
 显然，斯皮尔曼系数不仅可以度量变量之间的线性和非线性相关性，如 $y = x^2, x > 0$，用皮尔逊系数度量则为不相关的，但是在斯皮尔曼系数下可以算得二者得相关性是 1。其实，虽然斯皮尔曼不要求变量是来自某个分布得，但是可以看出它还是要求变量得值是可以比较得，否则秩就没有意义了。且要处理变量中存在重复值得情况，即在 $X$ 或 $Y$ 中存在重复值时该如何赋予秩。
 
 当然，对于不同的变量类型，有不同得检验方法，具体可以参见：\href{https://zhuanlan.zhihu.com/p/396580986}{相关分析最全总结}、\href{https://zhuanlan.zhihu.com/p/94070722}{要做相关性分析，该如何选择正确的统计方法？}。
+
+\subsection{Jacobean Hessian}
