--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,8 @@
 \usepackage{pythonhighlight}
 \usepackage{cpphighlight}
 \usepackage{pdfpages}  
+
+\usepackage{fontawesome}  % 可以在latex中插入图标了！
 %\graphicspath{ {./images/} }
 
 %\newcommand{\tred}[1]{ {\textcolor{red}{#1}} }
@@ -56,7 +58,7 @@
   %图机器学习, 知识图谱\\
   信息科学与工程学院, 湖南大学\\
   长沙市, 岳麓区 麓山南路 \\
-  \texttt{zhiyanguo@hnu.edu.cn \hspace{12pt} \href{www.zyzq.site}{www.gzyzq.site}}
+  \texttt{zhiyanguo@hnu.edu.cn \hspace{12pt} \href{https://github.com/GZYZG/}{\faGithub GZYZG}}
   %% examples of more authors
 %%   \And
 %% Zixuan Lu \\
@@ -155,6 +157,9 @@
 {\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\ 
 \section{Basics}
 \input{body/DL/basic}
+
+\section{经典}
+\input{body/DL/classic}
 
 
 \clearpage
