--- a/setup/abstract.tex
+++ b/setup/abstract.tex
@@ -20,6 +20,8 @@
 这份文档用于记录郭治焱在研究生期间，学习、做研究的笔记、所感所悟等。文档正式开始于2020年暑假（研一开学前），但是由于当时做的还比较散乱，就不当作文档的起始时间了。文档正式纪录始于\textbf{2020-09-18}。
 
 近期逐步将一些部分的内容剥离了这个文档，将论文阅读笔记、想法分别放在了新的文档中。修改记录于\textbf{2020-10-14}凌晨。顺便感叹一下，想点子好难！
+
+这一两周（现在是\textbf{2022-04-13}）开始找实习了，人生如此多艰！
 % \begin{center}
 % \huge{{\color{red}路漫漫其修远兮， 吾将上下而求索~~~} }
 % \end{center}
