--- a/body/recsys/basic.tex
+++ b/body/recsys/basic.tex
@@ -140,3 +140,6 @@ $$
 但毫无疑问，用户需要惊喜，这会极大提升用户的满意度和使用体验，所以推荐系统对惊喜度的追求只会不断提高，且还需要在不影响预测准确度的前提下来实现。过于关注准确率会导致推荐结果的惊喜度不高。
 
 
+\subsection{用户画像}
+
+\subsection{电商推荐}
